tags/release-1.0.1/docsrc/examples.rst

.. _examples:

Examples
========


.. _example.activelayers:

.. cssclass:: exampleblock example-activelayers

Active Layers Panel
-------------------
Select layers into a stack of active layers and change opacity/stacking.



.. _example.activethemes:

.. cssclass:: exampleblock example-activethemes

Active Themes Panel
-------------------
Select layers into a stack of active layers and change opacity/stacking.



.. _example.appdemo:

.. cssclass:: exampleblock example-appdemo

Full App Demo
-------------
Full, self-contained, application demo showing basics of Hero configuration and styling/language options.



.. _example.baselayercombo:

.. cssclass:: exampleblock example-baselayercombo

BaseLayerCombo
--------------
Shows use of the BaseLayerCombo to select Base Layers.



.. _example.bookmarks:

.. cssclass:: exampleblock example-bookmarks

Bookmarks
---------
Lightweight web mapping context manager. Add and persist current map context (layers, zoom, extent etc).



.. _example.capabilitiestreepanel:

.. cssclass:: exampleblock example-capabilitiestreepanel

CapabilitiesTreePanel
---------------------
Populate a layer tree from a WMS GetCapabilties result.



.. _example.columnsautowidth:

.. cssclass:: exampleblock example-columnsautowidth

ColumnsAutoWidth
-----------------
Show WMS GetFeatureInfo in Panel with automatic column width based on fieldname and values.



.. _example.columnsfixedwidth:

.. cssclass:: exampleblock example-columnsfixedwidth

ColumnsFixedWidth
-----------------
Show WMS GetFeatureInfo in Panel with fixed columnwidth.



.. _example.coordsearch:

.. cssclass:: exampleblock example-coordsearch

Coordinate Search
-----------------
Go to point on map from coordinates entered in form.



.. _example.default:

.. cssclass:: exampleblock example-default

Default
-------
The default application using the default layout and options.



.. _example.defaultnl:

.. cssclass:: exampleblock example-defaultnl

DefaultNL
---------
The default application using the default layout and options with Dutch (NL) language, Layers and projection.



.. _example.editorbasics:

.. cssclass:: exampleblock example-editorbasics

Feature Editor Basics
---------------------
Show basic tools and operations using Geops OLE: https://github.com/geops/ole.



.. _example.embedded:

.. cssclass:: exampleblock example-embedded

Embedded
--------
Embed a Heron app within any page div element.



.. _example.featuregridformat:

.. cssclass:: exampleblock example-featuregridformat

Feature Grid Format
-------------------
Shows how to format cells within feature display grids such as from WMS GeoFeatureInfo or WFS.



.. _example.featuregridpanel:

.. cssclass:: exampleblock example-featuregridpanel

Grid with Feature Selection
---------------------------
Grid panel with mutually selectable features on both map and in grid.



.. _example.featureinfopanel:

.. cssclass:: exampleblock example-featureinfopanel

FeatureInfoPanel
----------------
Show WMS GetFeatureInfo in Panel embedded under Map when clicking the Map.



.. _example.featureinfopopup:

.. cssclass:: exampleblock example-featureinfopopup

FeatureInfoPopup
----------------
Show WMS GetFeatureInfo in popup Window when clicking the Map.



.. _example.featureinfopopuphover:

.. cssclass:: exampleblock example-featureinfopopuphover

FeatureInfoPopupHover
---------------------
Show WMS GetFeatureInfo in popup Window when hovering over the Map.



.. _example.featureinfopopupvertical:

.. cssclass:: exampleblock example-featureinfopopupvertical

FeatureInfoPopupVertical
------------------------
Show WMS GetFeatureInfo in popup Window when clicking the Map.
Popup show the attributes in a vertical list (Detail) and in a grid (Table).



.. _example.featureinfotooltips:

.. cssclass:: exampleblock example-featureinfotooltips

FeatureInfoTooltip
---------------------
Show WMS GetFeatureInfo in popup Window when hovering over the Map.



.. _example.fixedpanelslayout:

.. cssclass:: exampleblock example-fixedpanelslayout

FixedPanelsLayout
-----------------
An application with an alternative layout containing a fixed height
LayerPanel and LegendPanel.



.. _example.floatingwindow:

.. cssclass:: exampleblock example-floatingwindow

Floating Window
---------------
Demonstrates Heron app within floating Ext JS Window.



.. _example.formsearchbasic:

.. cssclass:: exampleblock example-formsearchbasic

Form Search Panel
-----------------
Embedded FormSearchPanel with backend (exact) WFS search and zoom to result.



.. _example.formsearchcenter:

.. cssclass:: exampleblock example-formsearchcenter

Search + Feature Selection
--------------------------
Search using Form-based WFS query, showing selectable and downloadable results on map and table.



.. _example.geoportal:

.. cssclass:: exampleblock example-geoportal

GeoPortal
---------
Use the MenuHandler to specify a complete portal website with content pages.



.. _example.googlemaps:

.. cssclass:: exampleblock example-googlemaps

Google Maps
-----------
Use Google Maps within a Heron app.



.. _example.inspire:

.. cssclass:: exampleblock example-inspire

INSPIRE
-------
Visualize INSPIRE layers with a custom LayerTree for INSPIRE data themes.



.. _example.layertree:

.. cssclass:: exampleblock example-layertree

LayerTree
---------
Build a custom layer tree for base layers and thematic overlays.



.. _example.legendcustom:

.. cssclass:: exampleblock example-legendcustom

Custom Legend
-------------
Demonstrates how to configure a custom legend image as URL for a Layer.



.. _example.mapopensave:

.. cssclass:: exampleblock example-mapopensave

Map Open and Save
------------------------
Open and Save a Heron map based on Web Map Context for WMS and TMS layers.



.. _example.mapopensavetree:

.. cssclass:: exampleblock example-mapopensavetree

Map Open and Save Layertree
---------------------------
Open and Save a Heron map based on Web Map Context for WMS and TMS layers.
Layertree and TMS layer are saved extended to WMC.



.. _example.minimal:

.. cssclass:: exampleblock example-minimal

Minimal
-------
The "Hello World" app, the most minimal config to define a Heron app.



.. _example.multisearchcenter:

.. cssclass:: exampleblock example-multisearchcenter

Choose from multiple Searches
-----------------------------
Select a search from a list of predefined form- or spatial queries or your own queries.



.. _example.multisearchcenternl:

.. cssclass:: exampleblock example-multisearchcenternl

Choose from multiple searches (Dutch/PDOK layers)
-------------------------------------------------
Select a search from a list of predefined form- or spatial queries or your own queries.



.. _example.namesearch:

.. cssclass:: exampleblock example-namesearch

Name Search
-----------
Name search ala google suggest and zoom via OpenStreetMap Nominatim search.



.. _example.nolaunch:

.. cssclass:: exampleblock example-nolaunch

NoLaunch
--------
Take control over Heron initialization using the NoLaunch.js import.



.. _example.nostatusbar:

.. cssclass:: exampleblock example-nostatusbar

NoStatusBar
-----------
A default application with a MapPanel without a bottom status bar.



.. _example.openbasiskaart:

.. cssclass:: exampleblock example-openbasiskaart

OpenBasisKaart
--------------
Demonstrates layers from the OpenBasisKaart, OpenStreetMap tiles in Dutch (RD) projection developed by OpenGeoGroep.nl.



.. _example.pdokthijs:

.. cssclass:: exampleblock example-pdokthijs

PDOK
----
Demonstrates layers from the Dutch National SDI: PDOK (Publieke Dienstverlening Op de Kaart).



.. _example.printdialog:

.. cssclass:: exampleblock example-printdialog

PrintDialog
-----------
Printing with popup dialog containing preview and print options.



.. _example.printdirect:

.. cssclass:: exampleblock example-printdirect

PrintDirect
-----------
Immediate printing of visible map area.



.. _example.printvector:

.. cssclass:: exampleblock example-printvector

PrintVector
-----------
Printing with popup dialog for vector layer and selected features.



.. _example.querybuilder:

.. cssclass:: exampleblock example-querybuilder

Edit and execute WFS Queries
----------------------------
Use the GXP QueryPanel to build and execute WFS spatial and filter-queries.



.. _example.querybuildernl:

.. cssclass:: exampleblock example-querybuildernl

Edit and execute WFS Queries Dutch WFSs
---------------------------------------
Use the GXP QueryPanel to build and execute WFS spatial and filter-queries on Dutch WFSs like PDOK/BAG.



.. _example.searchbydraw:

.. cssclass:: exampleblock example-searchbydraw

Search features by drawing on Map
---------------------------------
Search features by drawing geometries on the map.



.. _example.searchbyfeature:

.. cssclass:: exampleblock example-searchbyfeature

Search features by features from other layers
---------------------------------------------
Select and download features by selecting features from other layers.



.. _example.statusbar:

.. cssclass:: exampleblock example-statusbar

StatusBar
-----------
MapPanel with bottom status bar.



.. _example.sublayers:

.. cssclass:: exampleblock example-sublayers

Sublayers
---------
Layers, each with data-subset via filtering from single WMS/WFS Layer.



.. _example.theming:

.. cssclass:: exampleblock example-theming

Theming
-------
Use other ExtJS themes, this "Greenery" theme created through http://extbuilder.dynalias.com.



.. _example.toolbar-item:

.. cssclass:: exampleblock example-toolbar-item

Extend Map Toolbar
------------------
Extend the toolbar with your own custom items/menu's and handlers.



.. _example.uploadfeatures:

.. cssclass:: exampleblock example-uploadfeatures

Upload Features
---------------
Upload features from local file (GML, CSV etc) into a Layer.



.. _example.vectorstyler:

.. cssclass:: exampleblock example-vectorstyler

Vector Styler
-------------
Style Vector Layers interactively.



.. _example.workshopnl:

.. cssclass:: exampleblock example-workshopnl

Heron Workshop (Dutch Grid)
---------------------------
Answers for Heron Workshop exercises (Dutch Maps/Grid).


